# file-agent

./: .dockerignore  .env.example  .gitignore  AGENTS.md  AI_File_Intelligence_Agent_PRD_v2.md  CLAUDE.md  Dockerfile  Makefile  README.md  config.yaml  dash.html  docker-compose.yml  install.sh  package.json  pyproject.toml  requirements.txt  tailwind.config.js  update.sh
.docs/: ENCRYPTION_PLAN.md  PROJECT.md  SECURITY_AUDIT.md  TECHNICAL.md  USER_GUIDE.md
app/: config.py  main.py  mcp_server.py  pipeline.py
docs/: ENCRYPTION.md  PROJECT.md  SECURITY_OVERVIEW.md  USER_GUIDE.md  architecture-audit-2026-05-08.md  architecture-audit-2026-05-08.ru.md  codex-claude-setup.md  codex-claude-setup.ru.md  cognee-spike-report.md  cognee-spike-report.ru.md  cognee-spike2-report.md  cognee-spike2-report.ru.md  competitive-audit-2026-05-10.md  memory-audit-2026-05-10.md  memory-system-map.md  memory-system-map.ru.md  ux-brainstorm-2026-05-10.md
infra/: README-qdrant.md  docker-compose.qdrant.yml  qdrant_config.yaml
scripts/: build_docs_wiki.py  build_wiki.py  cognee_cognify.py  cognee_reingest_all.py  decrypt_legacy_files.py  decrypt_legacy_notes.py  memory_doctor.py  migrate_document_dates.py  migrate_encryption.py  reclassify_only.py  redo_note_enrichments.py  reembed_images.py  reindex_all.py  reindex_notes.py  rescan_reminders.py  spike2_cognee_e2e.py
skills/: TEMPLATE.yaml  business.yaml  health.yaml  personal.yaml  receipts.yaml
tests/: conftest.py  test_analytics.py  test_bot_handlers.py  test_categorizer.py  test_crypto.py  test_db.py  test_errors.py  test_parser.py  (+12 more)
(+118 files in other folders)
